--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "lodash": "^4.15.0",
+    "method-override": "^2.3.6",
     "morgan": "~1.7.0",
     "mysql": "^2.11.1",
     "sequelize": "^3.24.0",
